--- a/home_page_employee.html
+++ b/home_page_employee.html
@@ -87,6 +87,9 @@
                                 <a type="button" style="margin-left: 1%;" href='employee_day_summary_for_ba2y.html'
                                 class="btn btn-danger">ملخص المتبقي</a>
 
+                                <a type="button" style="margin-left: 1%;" href='employee_day_summary_for_ba2y_empty.html'
+                                class="btn btn-warning">ملخص بدون عمل</a>
+
                             <a type="button" style="margin-left: 1%;" href='employee_day_summary_masrofat.html'
                                 class="btn btn-primary">ملخص مصروف اليوم</a>
 
