--- a/main.html
+++ b/main.html
@@ -143,7 +143,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a >
+                        <a href="store.html">
                             <div class="panel-footer">
                                 <span class="pull-left">اضغط هنا</span>
                                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
