--- a/staff_summry.html
+++ b/staff_summry.html
@@ -162,6 +162,10 @@
                                                 <td style="font-size:18pt">المتبقي</td>
                                                 <td style="font-weight:bold;font-size:25pt" id="fourth"></td>
                                             </tr>
+                                            <tr>
+                                                <td style="font-size:18pt">ملاحظات</td>
+                                                <td style="font-weight:bold;font-size:25pt" id="sevenId"></td>
+                                            </tr>
                                         </tbody>
                                     </table>
                                     <h1 id="loading_price" style="color: red;" hidden> برجاء الانتظار</h1>
@@ -282,6 +286,8 @@
                 var timeMinutes = 0;
                 var selectedMonth = document.getElementById("selectorDate").value;
                 database.ref('staff').child(key).once('value', function (snapshot) {
+                    //alert(snapshot.val().note)
+                    document.getElementById("sevenId").innerHTML = snapshot.val().note
                     subTotal = parseInt(snapshot.val().salary)
                     if (snapshot.val().insurance)
                         insurance = parseInt(snapshot.val().insurance)
