--- a/employee_home_send.html
+++ b/employee_home_send.html
@@ -85,8 +85,8 @@
                                     </tr>
                                     <tr>
                                         <th>النوع</th>
-                                        <td><select id="type" class="form-control" onchange="onChangeType()">
-
+                                        <td><select id="type" class="form-control" style="font-size: 20px;height: 50px;" onchange="onChangeType()">
+                                            
                                             </select>
                                         </td>
 
