--- a/staff_summry.html
+++ b/staff_summry.html
@@ -326,8 +326,8 @@
                     document.getElementById("first").innerHTML = `${subTotal.toFixed(2)} جنية مصرى`
                     document.getElementById("sixth").innerHTML = `${insurance} جنية مصرى`
                     document.getElementById("second").innerHTML = `${expenses.toFixed(2)} جنية مصرى`
-                    document.getElementById("third").innerHTML = `${subtract.toFixed(2)} جنية مصرى من`
-                    document.getElementById("fifth").innerHTML = `${overTime.toFixed(2)} جنية مصرى من`
+                    document.getElementById("third").innerHTML = `${subtract.toFixed(2)} جنية مصرى `
+                    document.getElementById("fifth").innerHTML = `${overTime.toFixed(2)} جنية مصرى `
                     var total = (subTotal - expenses - subtract + overTime - insurance).toFixed(2)
                     document.getElementById("fourth").innerHTML = `${total} جنية مصرى`
 
