--- a/supplier_home_recieve.html
+++ b/supplier_home_recieve.html
@@ -98,6 +98,18 @@
                                     </tr>
 
                                     <tr>
+                                        <th>المبلغ باليورو </th>
+                                        <td><input id="euro" type="number" class="form-control" value="0"
+                                                onchange="onChangeType()"></textarea></td>
+                                    </tr>
+
+                                    <tr>
+                                        <th>المبلغ بالدينار </th>
+                                        <td><input id="dinar" type="number" class="form-control" value="0"
+                                                onchange="onChangeType()"></textarea></td>
+                                    </tr>
+
+                                    <tr>
                                         <th>سعر العملة</th>
                                         <td>
                                             <input id="price" type="number" class="form-control" value="0"
@@ -157,6 +169,8 @@
                                     <tr>
                                         <th>التاريخ</th>
                                         <th>المبلغ بالدولار</th>
+                                        <th>المبلغ باليورو</th>
+                                        <th>المبلغ بالدينار</th>
                                         <th>سعر العملة</th>
                                         <th>عمولة التحويل</th>
                                         <th> مصاريف اخرى</th>
@@ -244,9 +258,9 @@
                 snapshot.forEach(function (childSnapshot) {
                     var childData = childSnapshot.val();
                     if (childData.dynamic_title) {
-                        var table = `<tr> <td> ${childData.date} </td> <td> ${childData.dollar} </td> <td> ${childData.price} </td><td> ${childData.price_discount} </td> <td> ${childData.dynamic_title +" " + childData.dynamic_value } </td><td> ${childData.egp} </td><td> ${childData.total} </td><td> ${childData.my_note} </td><td> <button style="color:red;" class='btn btn-error' onclick="deleteItem('${childSnapshot.key}')">حذف </a></td> </tr>`;
+                        var table = `<tr> <td> ${childData.date} </td> <td> ${childData.dollar} </td><td> ${childData.euro} </td><td> ${childData.dinar} </td> <td> ${childData.price} </td><td> ${childData.price_discount} </td> <td> ${childData.dynamic_title +" " + childData.dynamic_value } </td><td> ${childData.egp} </td><td> ${childData.total} </td><td> ${childData.my_note} </td><td> <button style="color:red;" class='btn btn-error' onclick="deleteItem('${childSnapshot.key}')">حذف </a></td> </tr>`;
                     } else {
-                        var table = `<tr> <td> ${childData.date} </td> <td> ${childData.dollar} </td> <td> ${childData.price} </td><td> ${childData.price_discount} </td> <td> </td><td> ${childData.egp} </td><td> ${childData.total} </td><td> ${childData.my_note} </td><td> <button style="color:red;" class='btn btn-error' onclick="deleteItem('${childSnapshot.key}')">حذف </a></td> </tr>`;
+                        var table = `<tr> <td> ${childData.date} </td> <td> ${childData.dollar} </td> <td> ${childData.euro} </td><td> ${childData.dinar} </td><td> ${childData.price} </td><td> ${childData.price_discount} </td> <td> </td><td> ${childData.egp} </td><td> ${childData.total} </td><td> ${childData.my_note} </td><td> <button style="color:red;" class='btn btn-error' onclick="deleteItem('${childSnapshot.key}')">حذف </a></td> </tr>`;
                     }
                     $('.app-spinner').remove();
                     myTotal += parseFloat(childData.egp);
@@ -257,6 +271,8 @@
         }
         function onChangeType() {
             var dollar = document.getElementById("dollar").value
+            // var euro = document.getElementById("euro").value
+            // var dinar = document.getElementById("dinar").value
             var egp = document.getElementById("egp").value
 
             if (dollar > 0){
@@ -290,6 +306,8 @@ function printMyPage() {
         function save_for_salem() {
             var date = document.getElementById("date").value
             var dollar = document.getElementById("dollar").value
+            var euro = document.getElementById("euro").value
+            var dinar = document.getElementById("dinar").value
             var egp = document.getElementById("egp").value
             var price_discount = document.getElementById("price_discount").value
             var dynamic_title = document.getElementById("dynamic_title").value
@@ -303,6 +321,8 @@ function printMyPage() {
                 database.ref().child('reveice').child(key).push().set({
                     date: date,
                     dollar: dollar,
+                    euro: euro,
+                    dinar: dinar,
                     egp: egp,
                     price: price,
                     price_discount: price_discount,
@@ -319,6 +339,8 @@ function printMyPage() {
                         alert("تم الحفظ بنجاح");
                         document.getElementById("date").value = ""
                         document.getElementById("dollar").value = "0"
+                        document.getElementById("euro").value = "0"
+                        document.getElementById("dinar").value = "0"
                         document.getElementById("egp").value = "0"
                         document.getElementById("price").value = "0"
                         document.getElementById("price_discount").value = "0"
