--- a/supplier_home_send.html
+++ b/supplier_home_send.html
@@ -219,7 +219,7 @@
                                         <th>العدد</th>
                                         <th>الصنف</th>
                                         <th>المقاس</th>
-                                        <th>اللون/النوع/الاسم</th>
+                                        <th style="width: 10px;text-align: center;">اللون النوع الاسم</th>
                                         
                                         <th>السعر</th>
                                         <th>10%</th>
